// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`convertWireToOsdkObjects > reconstitutes interfaces properly with rid - new 2`] = `
{
  "$apiName": "Employee",
  "$metadata": {
    "apiName": "Employee",
    "description": "A full-time or part-time 

 employee of our firm",
    "displayName": "Employee",
    "icon": {
      "color": "blue",
      "name": "person",
      "type": "blueprint",
    },
    "implements": [
      "FooInterface",
    ],
    "interfaceMap": {
      "FooInterface": {
        "fooSpt": "fullName",
      },
    },
    "inverseInterfaceMap": {
      "FooInterface": {
        "fullName": "fooSpt",
      },
    },
    "links": {
      "lead": {
        "multiplicity": false,
        "targetType": "Employee",
      },
      "officeLink": {
        "multiplicity": false,
        "targetType": "Office",
      },
      "peeps": {
        "multiplicity": true,
        "targetType": "Employee",
      },
    },
    "pluralDisplayName": "Employees",
    "primaryKeyApiName": "employeeId",
    "primaryKeyType": "integer",
    "properties": {
      "class": {
        "description": "",
        "displayName": undefined,
        "multiplicity": false,
        "nullable": true,
        "type": "string",
      },
      "employeeId": {
        "description": undefined,
        "displayName": undefined,
        "multiplicity": false,
        "nullable": false,
        "type": "integer",
      },
      "employeeLocation": {
        "description": "Geotime series reference of the location of the employee",
        "displayName": undefined,
        "multiplicity": false,
        "nullable": true,
        "type": "geotimeSeriesReference",
      },
      "employeeSensor": {
        "description": "TimeSeries sensor of the status of the employee",
        "displayName": undefined,
        "multiplicity": false,
        "nullable": true,
        "type": "sensorTimeseries",
      },
      "employeeStatus": {
        "description": "TimeSeries of the status of the employee",
        "displayName": undefined,
        "multiplicity": false,
        "nullable": true,
        "type": "stringTimeseries",
      },
      "fullName": {
        "description": undefined,
        "displayName": undefined,
        "multiplicity": false,
        "nullable": true,
        "type": "string",
      },
      "office": {
        "description": "The unique "ID" of the employee's \\"primary\\" assigned office.
 This is some more text.",
        "displayName": undefined,
        "multiplicity": false,
        "nullable": true,
        "type": "string",
      },
      "startDate": {
        "description": "The date the employee was hired (most recently, if they were re-hired)",
        "displayName": undefined,
        "multiplicity": false,
        "nullable": true,
        "type": "datetime",
      },
    },
    "rid": "ri.ontology.main.object-type.401ac022-89eb-4591-8b7e-0a912b9efb44",
    "status": "ACTIVE",
    "titleProperty": "fullName",
    "type": "object",
    "visibility": "NORMAL",
    Symbol(InterfaceDefinitions): {
      "FooInterface": {
        "def": {
          "apiName": "FooInterface",
          "description": "Interface for Foo",
          "displayName": "Foo Interface",
          "implementedBy": [
            "Employee",
            "Person",
          ],
          "implements": [],
          "links": {},
          "properties": {
            "fooSpt": {
              "description": "A foo",
              "displayName": "Foo",
              "multiplicity": false,
              "nullable": true,
              "type": "string",
            },
          },
          "rid": "ri.interface.main.interface.1",
          "type": "interface",
        },
        "handler": undefined,
      },
    },
  },
  "$objectSpecifier": "Employee:0",
  "$objectType": "Employee",
  "$primaryKey": 0,
  "$rid": "hiMom",
  "$title": "Steve",
  "employeeId": 0,
  "fullName": "Steve",
}
`;

exports[`convertWireToOsdkObjects > reconstitutes interfaces properly with rid 2`] = `
{
  "$apiName": "Employee",
  "$metadata": {
    "apiName": "Employee",
    "description": "A full-time or part-time 

 employee of our firm",
    "displayName": "Employee",
    "icon": {
      "color": "blue",
      "name": "person",
      "type": "blueprint",
    },
    "implements": [
      "FooInterface",
    ],
    "interfaceMap": {
      "FooInterface": {
        "fooSpt": "fullName",
      },
    },
    "inverseInterfaceMap": {
      "FooInterface": {
        "fullName": "fooSpt",
      },
    },
    "links": {
      "lead": {
        "multiplicity": false,
        "targetType": "Employee",
      },
      "officeLink": {
        "multiplicity": false,
        "targetType": "Office",
      },
      "peeps": {
        "multiplicity": true,
        "targetType": "Employee",
      },
    },
    "pluralDisplayName": "Employees",
    "primaryKeyApiName": "employeeId",
    "primaryKeyType": "integer",
    "properties": {
      "class": {
        "description": "",
        "displayName": undefined,
        "multiplicity": false,
        "nullable": true,
        "type": "string",
      },
      "employeeId": {
        "description": undefined,
        "displayName": undefined,
        "multiplicity": false,
        "nullable": false,
        "type": "integer",
      },
      "employeeLocation": {
        "description": "Geotime series reference of the location of the employee",
        "displayName": undefined,
        "multiplicity": false,
        "nullable": true,
        "type": "geotimeSeriesReference",
      },
      "employeeSensor": {
        "description": "TimeSeries sensor of the status of the employee",
        "displayName": undefined,
        "multiplicity": false,
        "nullable": true,
        "type": "sensorTimeseries",
      },
      "employeeStatus": {
        "description": "TimeSeries of the status of the employee",
        "displayName": undefined,
        "multiplicity": false,
        "nullable": true,
        "type": "stringTimeseries",
      },
      "fullName": {
        "description": undefined,
        "displayName": undefined,
        "multiplicity": false,
        "nullable": true,
        "type": "string",
      },
      "office": {
        "description": "The unique "ID" of the employee's \\"primary\\" assigned office.
 This is some more text.",
        "displayName": undefined,
        "multiplicity": false,
        "nullable": true,
        "type": "string",
      },
      "startDate": {
        "description": "The date the employee was hired (most recently, if they were re-hired)",
        "displayName": undefined,
        "multiplicity": false,
        "nullable": true,
        "type": "datetime",
      },
    },
    "rid": "ri.ontology.main.object-type.401ac022-89eb-4591-8b7e-0a912b9efb44",
    "status": "ACTIVE",
    "titleProperty": "fullName",
    "type": "object",
    "visibility": "NORMAL",
    Symbol(InterfaceDefinitions): {
      "FooInterface": {
        "def": {
          "apiName": "FooInterface",
          "description": "Interface for Foo",
          "displayName": "Foo Interface",
          "implementedBy": [
            "Employee",
            "Person",
          ],
          "implements": [],
          "links": {},
          "properties": {
            "fooSpt": {
              "description": "A foo",
              "displayName": "Foo",
              "multiplicity": false,
              "nullable": true,
              "type": "string",
            },
          },
          "rid": "ri.interface.main.interface.1",
          "type": "interface",
        },
        "handler": undefined,
      },
    },
  },
  "$objectSpecifier": "Employee:0",
  "$objectType": "Employee",
  "$primaryKey": 0,
  "$rid": "hiMom",
  "$title": "Steve",
  "employeeId": 0,
  "fullName": "Steve",
}
`;

exports[`convertWireToOsdkObjects > reconstitutes interfaces properly without rid - new 2`] = `
{
  "$apiName": "Employee",
  "$metadata": {
    "apiName": "Employee",
    "description": "A full-time or part-time 

 employee of our firm",
    "displayName": "Employee",
    "icon": {
      "color": "blue",
      "name": "person",
      "type": "blueprint",
    },
    "implements": [
      "FooInterface",
    ],
    "interfaceMap": {
      "FooInterface": {
        "fooSpt": "fullName",
      },
    },
    "inverseInterfaceMap": {
      "FooInterface": {
        "fullName": "fooSpt",
      },
    },
    "links": {
      "lead": {
        "multiplicity": false,
        "targetType": "Employee",
      },
      "officeLink": {
        "multiplicity": false,
        "targetType": "Office",
      },
      "peeps": {
        "multiplicity": true,
        "targetType": "Employee",
      },
    },
    "pluralDisplayName": "Employees",
    "primaryKeyApiName": "employeeId",
    "primaryKeyType": "integer",
    "properties": {
      "class": {
        "description": "",
        "displayName": undefined,
        "multiplicity": false,
        "nullable": true,
        "type": "string",
      },
      "employeeId": {
        "description": undefined,
        "displayName": undefined,
        "multiplicity": false,
        "nullable": false,
        "type": "integer",
      },
      "employeeLocation": {
        "description": "Geotime series reference of the location of the employee",
        "displayName": undefined,
        "multiplicity": false,
        "nullable": true,
        "type": "geotimeSeriesReference",
      },
      "employeeSensor": {
        "description": "TimeSeries sensor of the status of the employee",
        "displayName": undefined,
        "multiplicity": false,
        "nullable": true,
        "type": "sensorTimeseries",
      },
      "employeeStatus": {
        "description": "TimeSeries of the status of the employee",
        "displayName": undefined,
        "multiplicity": false,
        "nullable": true,
        "type": "stringTimeseries",
      },
      "fullName": {
        "description": undefined,
        "displayName": undefined,
        "multiplicity": false,
        "nullable": true,
        "type": "string",
      },
      "office": {
        "description": "The unique "ID" of the employee's \\"primary\\" assigned office.
 This is some more text.",
        "displayName": undefined,
        "multiplicity": false,
        "nullable": true,
        "type": "string",
      },
      "startDate": {
        "description": "The date the employee was hired (most recently, if they were re-hired)",
        "displayName": undefined,
        "multiplicity": false,
        "nullable": true,
        "type": "datetime",
      },
    },
    "rid": "ri.ontology.main.object-type.401ac022-89eb-4591-8b7e-0a912b9efb44",
    "status": "ACTIVE",
    "titleProperty": "fullName",
    "type": "object",
    "visibility": "NORMAL",
    Symbol(InterfaceDefinitions): {
      "FooInterface": {
        "def": {
          "apiName": "FooInterface",
          "description": "Interface for Foo",
          "displayName": "Foo Interface",
          "implementedBy": [
            "Employee",
            "Person",
          ],
          "implements": [],
          "links": {},
          "properties": {
            "fooSpt": {
              "description": "A foo",
              "displayName": "Foo",
              "multiplicity": false,
              "nullable": true,
              "type": "string",
            },
          },
          "rid": "ri.interface.main.interface.1",
          "type": "interface",
        },
        "handler": undefined,
      },
    },
  },
  "$objectSpecifier": "Employee:0",
  "$objectType": "Employee",
  "$primaryKey": 0,
  "$title": "Steve",
  "fullName": "Steve",
}
`;

exports[`convertWireToOsdkObjects > reconstitutes interfaces properly without rid - old 1`] = `
{
  "$apiName": "FooInterface",
  "$metadata": {
    "apiName": "FooInterface",
    "description": "Interface for Foo",
    "displayName": "Foo Interface",
    "implementedBy": [
      "Employee",
      "Person",
    ],
    "implements": [],
    "links": {},
    "properties": {
      "fooSpt": {
        "description": "A foo",
        "displayName": "Foo",
        "multiplicity": false,
        "nullable": true,
        "type": "string",
      },
    },
    "rid": "ri.interface.main.interface.1",
    "type": "interface",
  },
  "$objectSpecifier": "Employee:0",
  "$objectType": "Employee",
  "$primaryKey": 0,
  "$title": "Steve",
  "fooSpt": "Steve",
}
`;

exports[`convertWireToOsdkObjects > reconstitutes interfaces properly without rid - old 2`] = `
{
  "$apiName": "Employee",
  "$metadata": {
    "apiName": "Employee",
    "description": "A full-time or part-time 

 employee of our firm",
    "displayName": "Employee",
    "icon": {
      "color": "blue",
      "name": "person",
      "type": "blueprint",
    },
    "implements": [
      "FooInterface",
    ],
    "interfaceMap": {
      "FooInterface": {
        "fooSpt": "fullName",
      },
    },
    "inverseInterfaceMap": {
      "FooInterface": {
        "fullName": "fooSpt",
      },
    },
    "links": {
      "lead": {
        "multiplicity": false,
        "targetType": "Employee",
      },
      "officeLink": {
        "multiplicity": false,
        "targetType": "Office",
      },
      "peeps": {
        "multiplicity": true,
        "targetType": "Employee",
      },
    },
    "pluralDisplayName": "Employees",
    "primaryKeyApiName": "employeeId",
    "primaryKeyType": "integer",
    "properties": {
      "class": {
        "description": "",
        "displayName": undefined,
        "multiplicity": false,
        "nullable": true,
        "type": "string",
      },
      "employeeId": {
        "description": undefined,
        "displayName": undefined,
        "multiplicity": false,
        "nullable": false,
        "type": "integer",
      },
      "employeeLocation": {
        "description": "Geotime series reference of the location of the employee",
        "displayName": undefined,
        "multiplicity": false,
        "nullable": true,
        "type": "geotimeSeriesReference",
      },
      "employeeSensor": {
        "description": "TimeSeries sensor of the status of the employee",
        "displayName": undefined,
        "multiplicity": false,
        "nullable": true,
        "type": "sensorTimeseries",
      },
      "employeeStatus": {
        "description": "TimeSeries of the status of the employee",
        "displayName": undefined,
        "multiplicity": false,
        "nullable": true,
        "type": "stringTimeseries",
      },
      "fullName": {
        "description": undefined,
        "displayName": undefined,
        "multiplicity": false,
        "nullable": true,
        "type": "string",
      },
      "office": {
        "description": "The unique "ID" of the employee's \\"primary\\" assigned office.
 This is some more text.",
        "displayName": undefined,
        "multiplicity": false,
        "nullable": true,
        "type": "string",
      },
      "startDate": {
        "description": "The date the employee was hired (most recently, if they were re-hired)",
        "displayName": undefined,
        "multiplicity": false,
        "nullable": true,
        "type": "datetime",
      },
    },
    "rid": "ri.ontology.main.object-type.401ac022-89eb-4591-8b7e-0a912b9efb44",
    "status": "ACTIVE",
    "titleProperty": "fullName",
    "type": "object",
    "visibility": "NORMAL",
    Symbol(InterfaceDefinitions): {
      "FooInterface": {
        "def": {
          "apiName": "FooInterface",
          "description": "Interface for Foo",
          "displayName": "Foo Interface",
          "implementedBy": [
            "Employee",
            "Person",
          ],
          "implements": [],
          "links": {},
          "properties": {
            "fooSpt": {
              "description": "A foo",
              "displayName": "Foo",
              "multiplicity": false,
              "nullable": true,
              "type": "string",
            },
          },
          "rid": "ri.interface.main.interface.1",
          "type": "interface",
        },
        "handler": undefined,
      },
    },
  },
  "$objectSpecifier": "Employee:0",
  "$objectType": "Employee",
  "$primaryKey": 0,
  "$title": "Steve",
  "employeeId": 0,
  "fullName": "Steve",
}
`;

exports[`convertWireToOsdkObjects > stringifies properties on objects and interfaces correctly 1`] = `"{"employeeId":50030,"fullName":"John Doe","office":"NYC","class":"Red","startDate":"2019-01-01","employeeStatus":{},"employeeSensor":{},"employeeLocation":{},"$apiName":"Employee","$objectType":"Employee","$primaryKey":50030,"$objectSpecifier":"Employee:50030","$metadata":{"type":"object","apiName":"Employee","description":"A full-time or part-time \\n\\n employee of our firm","primaryKeyApiName":"employeeId","primaryKeyType":"integer","links":{"peeps":{"multiplicity":true,"targetType":"Employee"},"lead":{"multiplicity":false,"targetType":"Employee"},"officeLink":{"multiplicity":false,"targetType":"Office"}},"properties":{"employeeId":{"multiplicity":false,"type":"integer","nullable":false},"fullName":{"multiplicity":false,"type":"string","nullable":true},"office":{"multiplicity":false,"description":"The unique \\"ID\\" of the employee's \\\\\\"primary\\\\\\" assigned office.\\n This is some more text.","type":"string","nullable":true},"class":{"multiplicity":false,"description":"","type":"string","nullable":true},"startDate":{"multiplicity":false,"description":"The date the employee was hired (most recently, if they were re-hired)","type":"datetime","nullable":true},"employeeStatus":{"multiplicity":false,"description":"TimeSeries of the status of the employee","type":"stringTimeseries","nullable":true},"employeeSensor":{"multiplicity":false,"description":"TimeSeries sensor of the status of the employee","type":"sensorTimeseries","nullable":true},"employeeLocation":{"multiplicity":false,"description":"Geotime series reference of the location of the employee","type":"geotimeSeriesReference","nullable":true}},"implements":["FooInterface"],"interfaceMap":{"FooInterface":{"fooSpt":"fullName"}},"inverseInterfaceMap":{"FooInterface":{"fullName":"fooSpt"}},"icon":{"type":"blueprint","color":"blue","name":"person"},"titleProperty":"fullName","displayName":"Employee","pluralDisplayName":"Employees","status":"ACTIVE","rid":"ri.ontology.main.object-type.401ac022-89eb-4591-8b7e-0a912b9efb44","visibility":"NORMAL"}}"`;

exports[`convertWireToOsdkObjects > stringifies properties on objects and interfaces correctly 3`] = `"{"employeeId":50031,"fullName":"Jane Doe","office":"SEA","class":"Blue","startDate":"2012-02-12","employeeStatus":{},"employeeSensor":{},"employeeLocation":{},"$apiName":"Employee","$objectType":"Employee","$primaryKey":50031,"$title":"Jane Doe","$objectSpecifier":"Employee:50031","$metadata":{"type":"object","apiName":"Employee","description":"A full-time or part-time \\n\\n employee of our firm","primaryKeyApiName":"employeeId","primaryKeyType":"integer","links":{"peeps":{"multiplicity":true,"targetType":"Employee"},"lead":{"multiplicity":false,"targetType":"Employee"},"officeLink":{"multiplicity":false,"targetType":"Office"}},"properties":{"employeeId":{"multiplicity":false,"type":"integer","nullable":false},"fullName":{"multiplicity":false,"type":"string","nullable":true},"office":{"multiplicity":false,"description":"The unique \\"ID\\" of the employee's \\\\\\"primary\\\\\\" assigned office.\\n This is some more text.","type":"string","nullable":true},"class":{"multiplicity":false,"description":"","type":"string","nullable":true},"startDate":{"multiplicity":false,"description":"The date the employee was hired (most recently, if they were re-hired)","type":"datetime","nullable":true},"employeeStatus":{"multiplicity":false,"description":"TimeSeries of the status of the employee","type":"stringTimeseries","nullable":true},"employeeSensor":{"multiplicity":false,"description":"TimeSeries sensor of the status of the employee","type":"sensorTimeseries","nullable":true},"employeeLocation":{"multiplicity":false,"description":"Geotime series reference of the location of the employee","type":"geotimeSeriesReference","nullable":true}},"implements":["FooInterface"],"interfaceMap":{"FooInterface":{"fooSpt":"fullName"}},"inverseInterfaceMap":{"FooInterface":{"fullName":"fooSpt"}},"icon":{"type":"blueprint","color":"blue","name":"person"},"titleProperty":"fullName","displayName":"Employee","pluralDisplayName":"Employees","status":"ACTIVE","rid":"ri.ontology.main.object-type.401ac022-89eb-4591-8b7e-0a912b9efb44","visibility":"NORMAL"}}"`;
